--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -7,8 +7,15 @@
     url = {https://www.R-project.org/},
   }
   
-  
-@Article{thereferencecanbewhatever,
+@Manual{OpenDataTO,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
+    year = {2022},
+    note = {R package version 0.1.5, 
+https://github.com/sharlagelfand/opendatatoronto/},
+    url = {https://sharlagelfand.github.io/opendatatoronto/},
+  }
+@Article{tidyVerse,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -17,42 +24,54 @@
     number = {43},
     pages = {1686},
     doi = {10.21105/joss.01686},
-  }  
+  }
+@Manual{tinyTex,
+    title = {TinyTeX: A lightweight, cross-platform, and
+  easy-to-maintain LaTeX distribution based on TeX Live.},
+    author = {Yihui Xie},
+    year = {2019},
+    note = {R package version 0.4, 
+https://github.com/rstudio/tinytex},
+    url = {https://github.com/rstudio/tinytex},
+  }
+@Manual{janitor,
+    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    author = {Sam Firke},
+    year = {2023},
+    note = {R package version 2.2.0, 
+https://sfirke.github.io/janitor/},
+    url = {https://github.com/sfirke/janitor},
+  }
   
-  
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
-}
+ @Manual{readr,
+    title = {readr: Read Rectangular Text Data},
+    author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+    year = {2024},
+    note = {R package version 2.1.5, https://github.com/tidyverse/readr},
+    url = {https://readr.tidyverse.org},
+  }
+ @Manual{dplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+    year = {2023},
+    note = {R package version 1.1.4, https://github.com/tidyverse/dplyr},
+    url = {https://dplyr.tidyverse.org},
+  }
+@Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
 
-@Misc{rstanarm,
-    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
+ 
+@Article{TorontoObserver,
+    title = {Toronto creates another winter plan to address rising homelessness. Is it enough?},
+    author = {Zakaria Omar},
+    year = {2023},
+    publisher = {The Toronto Observer},
+    url = {https://torontoobserver.ca/2023/11/14/toronto-creates-another-winter-plan-to-address-rising-homelessness-is-it-enough/#:~:text=Data%20from%20Statistics%20Canada%20shows,and%20outside%20the%20shelter%20system.},
   }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
-  }
+
